Added logout functionality to revoke token Refactored code